--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -1,3 +1,14 @@
+
+
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    background: linear-gradient(270deg, #7a00ff, #00d2ff, #ff0099, #ffd200);
+    background-size: 600% 600%;
+    animation: gradientAnimation 12s ease infinite;
+}
+
 /* Container Styling */
 .contact-container {
     display: flex;
@@ -39,13 +50,13 @@
     padding: 30px;
     border-radius: 8px;
     width: 100%;
-    max-width: 350px;
+    max-width: 400px; /* Increase max-width */
+    min-height: 250px; /* Set minimum height */
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
     transform: translateZ(0);
     transition: transform 0.3s;
     z-index: 1;
 }
-
 .contact-info:hover {
     transform: translateY(-10px);
 }
@@ -85,12 +96,12 @@
     padding: 30px;
     border-radius: 8px;
     width: 100%;
-    max-width: 450px;
+    max-width: 500px; /* Increase max-width */
+    min-height: 450px; /* Set minimum height */
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
     z-index: 1;
     transition: transform 0.3s;
 }
-
 .contact-form-container:hover {
     transform: translateY(-10px);
 }
