udpate the contact-info

--- a/src/assets/css/Services.css
+++ b/src/assets/css/Services.css
@@ -6,6 +6,7 @@
     color: #fff;
     text-align: center;
     gap: 20px;
+    
 }
 
 /* Video container styles */
@@ -37,7 +38,11 @@
 
 
 
-
+.service-footer{
+    display: flex;
+  
+    width: 100%;
+}
 
 
 
